syntax = "proto3";

package com.example.grpc.fanStatus;

option java_multiple_files = true;
option java_package = "com.example.grpc.fanStatus";
option java_outer_classname = "fanStatusProto";

service FanService {

  // Bidirectional streaming RPC
  rpc StreamingTemperatureFanStatus(stream StreamTemperatureToFan) /*ClientInformation*/ returns (stream StreamFanStatus);
}

message StreamTemperatureToFan {
  int32 temperature = 1;
}

message StreamFanStatus {
  bool message = 1;
}